--- a/app/views/post_comments/reply_comments.slim
+++ b/app/views/post_comments/reply_comments.slim
@@ -1,3 +1,3 @@
 .content-comment-wrapper
   = render 'posts/show', post: @post
-  = render '/comments/index', comments: @comments
+  = render 'comments/index', comments: @comments
