--- a/app/views/posts/_show.slim
+++ b/app/views/posts/_show.slim
@@ -1,16 +1,17 @@
-.news-article-wrapper
-  .groups-subscription-wrapper
-    //- post.news_categories.each do |news_category|
-      span.title-main-wrapper
-        = news_category.title.capitalize
+.post-wrapper
+  .post-info-wrapper
+    .user-info-wrapper
+      = link_to user_path(post.user.username) do
+        - if post.user.profile_picture.url
+          = image_tag(post.user.profile_picture.square_320.url, class: 'profile-image')
+        - else
+          = image_pack_tag('media/images/placeholders/placeholder-user-profile.png', class: 'profile-image')
+          
+      .user-info
+        span #{post.user.full_name}
+        span #{comment_timestamp(post.created_at)}
         
-    //- news_article.topics.each do |topic|
-      span.title-main-wrapper
-        = topic.title.capitalize
-    
-    //- if current_user
-      span.title-main-wrapper.new
-        = link_to '+ Topic', search_news_article_path(news_article), remote: true
+    p.post-status On approve
   
   - if post.image.present?
     = image_tag(post.image.url, class: 'url-full-image', onerror: "this.error=null;this.src='#{asset_pack_path('media/images/placeholders/placeholder-news.png')}'")
@@ -27,9 +28,9 @@
         i class=(post.is_commented(current_user) ? "ic comment reverse active" : "ic comment reverse")
         span.info-panel-value.color-black #{counter_measurement(post.comments.count)}
     
-  .news-article-text
-    .news-article-title
+  .post-text
+    .post-title
       = post.title
-    .news-article-description
+    .post-description
       = post.description
       
