--- a/app/views/posts/_show.slim
+++ b/app/views/posts/_show.slim
@@ -10,8 +10,9 @@
       .user-info
         span #{post.user.full_name}
         span #{comment_timestamp(post.created_at)}
-        
-    p.post-status On approve
+    
+    - if post.source_type == 'Topic' && !post.source.is_approved
+      p.post-status On approve
   
   - if post.image.present?
     = image_tag(post.image.url, class: 'url-full-image', onerror: "this.error=null;this.src='#{asset_pack_path('media/images/placeholders/placeholder-news.png')}'")
