--- a/app/views/post_comments/reply_comments.slim
+++ b/app/views/post_comments/reply_comments.slim
@@ -1,5 +1,5 @@
 .source-path
-  = topic_short_title(@post.source)
+  = topic_full_title(@post.source)
   
 .content-comment-wrapper.content-post
   = render 'posts/show', post: @post
