--- a/app/webpack/stylesheets/custom_fields.scss
+++ b/app/webpack/stylesheets/custom_fields.scss
@@ -36,6 +36,26 @@ form select.form-control { padding: 0.375rem 0rem; }
 }
 
 // Input icons format
+.input-group .input-group-append { margin: 0 }
+
+.input-group.search {
+  .input-group-prepend .input-group-text,
+  .input-group-append .input-group-text {
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    border-bottom: 0;
+    background-color: $color-light-blue;
+    padding: 0.375rem 0.5rem 0.375rem 0.5rem;
+  }
+  
+  input {
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    border-bottom: 0;
+    background-color: $color-light-blue;
+  }
+}
+
 .input-group .input-group-prepend .input-group-text,
 .input-group .input-group-append .input-group-text {
   border: none;
