Add default view for SearchResults on Web

--- a/app/webpack/stylesheets/application.scss
+++ b/app/webpack/stylesheets/application.scss
@@ -44,6 +44,7 @@ $grid-breakpoints: (
 @import './home/index';
 @import './news_articles/index';
 @import './posts/index';
+@import './searches/index';
 @import './user_profile/index';
 @import './video_player/index';
 @import './events/index';
