--- a/app/webpack/stylesheets/posts/show.scss
+++ b/app/webpack/stylesheets/posts/show.scss
@@ -72,6 +72,24 @@
   }
 }
 
+// Images
+.post-images-wrapper {
+  overflow: auto;
+  max-height: 600px;
+  
+  .image-card {
+    display: inline;
+    
+    img {
+      cursor: pointer;
+      padding: 10px;
+      width: 50%;
+    }
+    
+    img:hover { padding: 14px; }
+  }
+}
+
 @media (max-width: map-get($grid-breakpoints, "md")) {
   .content-comment-wrapper { display: block; }
 }
