--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -71,8 +71,11 @@ html
               i.vertical-line
             .navbar-icon-wrappers
               = image_pack_tag('media/images/icons/ic_dialog.png')
-            .navbar-icon-wrappers
-              = image_pack_tag('media/images/icons/ic_notification.png')
+            .navbar-icon-wrappers.dropdown
+              a.dropdown-toggle#dropdownNotification data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
+                = image_pack_tag('media/images/icons/ic_notification.png')
+              - if current_user.received_notifications.unviewed.present?
+                .dropdown-menu.dropdown-menu-right aria-labelledby="dropdownNotification"
             
             .navbar-icon-wrappers.dropdown
               a.dropdown-toggle#dropdownMenuButton data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
