--- a/app/webpack/stylesheets/application.scss
+++ b/app/webpack/stylesheets/application.scss
@@ -5,6 +5,7 @@
 $color-blue: #3F51B5;
 $color-light-blue: #D4D7ED;
 $color-cadet-blue: #EAF1FF;
+$color-dark-cadet-blue: #808BD0;
 $color-black: #000000;
 $color-red: #DA100B;
 $color-grey: #9C9C9C;
