--- a/app/webpack/stylesheets/navigation_bar.scss
+++ b/app/webpack/stylesheets/navigation_bar.scss
@@ -77,3 +77,68 @@
   
   &.no-border { border: none; }
 }
+
+#notifications-list-placeholder {
+  overflow: scroll;
+  max-height: 50vh;
+}
+
+.navbar-icon-wrappers .dropdown-item.notification {
+  padding: 0.25rem 0rem 0.25rem 1.5rem;
+  margin: 12px 0px;
+  display: flex;
+  white-space: break-spaces;
+  border-bottom: none;
+  
+  .notification-image, .notification-icon {
+    height: 40px;
+    width: 40px;
+    display: flex;
+  }
+  
+  .body {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    width: 300px;
+    margin-left: 16px;
+    padding-right: 1.5rem;
+    border-bottom: 1px solid $color-light-grey;
+    
+    .header {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      
+      .title {
+        width: 65%;
+        font-size: 16px;
+      }
+        
+      .date {
+        font-size: 12px;
+        color: $color-grey
+      }
+    }
+    
+    .message {
+      display: flex;
+      align-items: center;
+      margin-bottom: 12px;
+      
+      .icon {
+        margin-right: 6px;
+        height: 18px;
+        width: auto;
+        
+        img { display: flex; height: 100%; }
+      }
+      
+      .text {
+        word-break: break-all;
+        font-size: 14px;
+        color: $color-dark-cadet-blue;
+      }
+    }
+  }
+}
