--- a/app/webpack/stylesheets/navigation_bar.scss
+++ b/app/webpack/stylesheets/navigation_bar.scss
@@ -87,13 +87,28 @@
   padding: 0.25rem 0rem 0.25rem 1.5rem;
   margin: 12px 0px;
   display: flex;
+  align-items: center;
   white-space: break-spaces;
   border-bottom: none;
   
-  .notification-image, .notification-icon {
+  .notification-image {
     height: 40px;
     width: 40px;
     display: flex;
+  }
+  
+  .notification-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 40px;
+    width: 40px;
+    display: flex;
+    
+    img {
+      height: 30px;
+      width: auto;
+    }
   }
   
   .body {
@@ -111,7 +126,7 @@
       justify-content: space-between;
       
       .title {
-        width: 65%;
+        width: 50%;
         font-size: 16px;
       }
         
