Add redis to project, add notification bage view

--- a/app/webpack/stylesheets/navigation_bar.scss
+++ b/app/webpack/stylesheets/navigation_bar.scss
@@ -157,3 +157,17 @@
     }
   }
 }
+
+i.notification-bage {
+  position: absolute;
+  right: -5px;
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  display: none;
+  
+  &.active {
+    display: block;
+    background-color: $color-red;
+  }
+}
