--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -74,9 +74,11 @@ html
             .navbar-icon-wrappers.dropdown
               a.dropdown-toggle#dropdown-notification data-toggle="dropdown"
                 = image_pack_tag('media/images/icons/ic_notification.png')
+              
+              i.notification-bage#notification-bage class="#{current_user.received_notifications.present? ? 'active' : ''}"
               .dropdown-menu.dropdown-menu-right aria-labelledby="dropdown-notification"
                 #notifications-list-placeholder
-            
+                
             .navbar-icon-wrappers.dropdown
               a.dropdown-toggle#dropdownMenuButton data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
                 = image_pack_tag('media/images/icons/ic_settings.png')
