Process case when User has no Image for new Post

--- a/app/views/posts/_user_images_form.slim
+++ b/app/views/posts/_user_images_form.slim
@@ -1,4 +1,7 @@
 .post-images-wrapper
-  - @user_images.each do |image|
-    .image-card
-      = image_tag(image.file.rectangle_160_160.url, data: {'image-url': image.file.url, 'image-id': image.id })
+  - if @user_images.present?
+    - @user_images.each do |image|
+      .image-card
+        = image_tag(image.file.rectangle_160_160.url, data: {'image-url': image.file.url, 'image-id': image.id })
+  - else
+    = link_to 'Your image library is empty', images_user_image_path(current_user.username)
