--- a/app/webpack/stylesheets/posts/index.scss
+++ b/app/webpack/stylesheets/posts/index.scss
@@ -14,9 +14,8 @@
   }
 }
 
-.posts-cards-wrapper .posts-card:nth-child(4n) {
-  margin-right: 0;
-}
+.posts-cards-wrapper.profile .posts-card:nth-child(4n) { margin-right: 16px; }
+.posts-cards-wrapper .posts-card:nth-child(4n) { margin-right: 0; }
 
 .posts-cards-wrapper .posts-card {
   display: inline-block;
@@ -63,6 +62,7 @@
   object-fit: cover;
   text-align: center;
   overflow: hidden;
+  border-radius: 4px;
   background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
 }
 
@@ -114,8 +114,11 @@
 }
 
 @media (max-width: map-get($grid-breakpoints, "lg")) {
+  .posts-cards-wrapper.profile .posts-card:nth-child(2n) { margin-right: 16px; }
   .posts-cards-wrapper .posts-card:nth-child(4n) { margin-right: 16px; }
   .posts-cards-wrapper .posts-card:nth-child(2n) { margin-right: 0px; }
+  
+  .posts-cards-wrapper.profile .posts-card { width: calc(100% * (1/4) - 12px); }
   .posts-cards-wrapper .posts-card {
     width: calc(100% * (1/2) - 10.5px);
     margin-right: 15px;
@@ -123,8 +126,11 @@
 }
 
 @media (max-width: map-get($grid-breakpoints, "md")) {
+  .posts-cards-wrapper.profile .posts-card:nth-child(3n), .posts-cards-wrapper.profile .posts-card:nth-child(2n), .posts-cards-wrapper.profile .posts-card:nth-child(1n) { margin-right: 16px; }
   .posts-cards-wrapper .posts-card:nth-child(4n) { margin-right: 0px; }
   .posts-cards-wrapper .posts-card:nth-child(3n) { margin-right: 0px; }
+  
+  .posts-cards-wrapper.profile .posts-card { width: 100%; }
   .posts-cards-wrapper .posts-card {
     width: 100%;
     margin-right: 0px;
