Add Group search to Post

--- a/app/views/groups/_search.slim
+++ b/app/views/groups/_search.slim
@@ -1,4 +1,4 @@
-.modal.fade.overflow-auto#modal-group-search aria-hidden="true" aria-labelledby="myLargeModalLabel" role="dialog" tabindex="-1"
+.modal.fade.overflow-auto id="#{search_id}" aria-hidden="true" aria-labelledby="myLargeModalLabel" role="dialog" tabindex="-1"
   .modal-dialog.modal-dialog-centered.modal-lg
     .modal-content
       .modal-header
