--- a/app/views/groups/index.slim
+++ b/app/views/groups/index.slim
@@ -3,4 +3,4 @@
 .content-groups-wrapper
   = render 'groups/comments', comments: @comments
   = render 'groups/groups', groups: @groups
-  = render 'groups/search', groups: @groups_for_search
+  = render 'groups/search', groups: @groups_for_search, search_id: 'modal-group-search'
