--- a/app/views/groups/_search_form.slim
+++ b/app/views/groups/_search_form.slim
@@ -11,7 +11,12 @@ form.search-wrapper
             span #{group.title.capitalize}
           
           .action-content
-            - if current_user.is_group_subscription(group)
-              = link_to "Remove", unsubscribe_groups_path(type: group.class.name, id: group.id), class: "btn btn-outline-primary", remote: true, method: :delete, data: { type: group.class.name, id: group.id }
-            - else
-              = link_to "Add", subscribe_groups_path(type: group.class.name, id: group.id), class: "btn btn-primary", remote: true, method: :post, data: { type: group.class.name, id: group.id }
+            - case @search_type
+            - when 'group'
+              - if current_user.is_group_subscription(group)
+                = link_to "Remove", unsubscribe_groups_path(type: group.class.name, id: group.id), class: "btn btn-outline-primary", remote: true, method: :delete, data: { type: group.class.name, id: group.id }
+              - else
+                = link_to "Add", subscribe_groups_path(type: group.class.name, id: group.id), class: "btn btn-primary", remote: true, method: :post, data: { type: group.class.name, id: group.id }
+                
+            - when 'post'
+              a.btn.btn-primary id="group_id_#{group.class.name}_#{group.id}" data-group-id="#{group.class.name}:#{group.id}" data-group-title="#{group.title.capitalize}" Add
