--- a/app/webpack/stylesheets/posts/show.scss
+++ b/app/webpack/stylesheets/posts/show.scss
@@ -7,6 +7,21 @@
 .post-wrapper {
   width: 100%;
   
+  .full-image-wrapper {
+    width: 100%;
+    height: 60vh;
+    object-fit: cover;
+    text-align: center;
+    overflow: hidden;
+    border-radius: 4px;
+    
+    img {
+      height: 100%;
+      width: 100%;
+      object-fit: cover;
+    }
+  }
+  
   .post-info-wrapper {
     margin-bottom: 20px;
     width: 100%;
