--- a/app/webpack/stylesheets/application.scss
+++ b/app/webpack/stylesheets/application.scss
@@ -39,6 +39,7 @@ $grid-breakpoints: (
 @import 'notification';
 @import 'spinner';
 @import 'toggle_switcher';
+@import './chats/index';
 @import './comments/index';
 @import './font_customaizer/index';
 @import './modals/index';
