--- a/app/webpack/stylesheets/custom_fields.scss
+++ b/app/webpack/stylesheets/custom_fields.scss
@@ -158,6 +158,72 @@ input[type='radio']:checked:after {
   font-size: 16px;
 }
 
+/* Customize the label (the container) */
+.big-checkbox-lable {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 22px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* Hide the browser's default checkbox */
+.big-checkbox-lable input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 18px;
+  width: 18px;
+  background-color: $color-white;
+  border: 1px solid $color-blue;
+  border-radius: 50%;
+}
+
+/* On mouse-over, add a grey background color */
+.big-checkbox-lable:hover input ~ .checkmark {
+  background-color: $color-light-blue;
+}
+
+/* When the checkbox is checked, add a blue background */
+.big-checkbox-lable input:checked ~ .checkmark { background-color: $color-blue; }
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the checkmark when checked */
+.big-checkbox-lable input:checked ~ .checkmark:after { display: block; }
+
+/* Style the checkmark/indicator */
+.big-checkbox-lable .checkmark:after {
+  left: 4px;
+  top: 0px;
+  width: 7px;
+  height: 12px;
+  border: solid $color-white;
+  border-width: 0 2px 2px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
 // Selector
 select {
   outline: none !important;
