Add ChatsController#create for Web

--- a/app/views/chats/_members_list.slim
+++ b/app/views/chats/_members_list.slim
@@ -12,5 +12,5 @@
           = user.full_name
         .member-is-checked
           label class="big-checkbox-lable"
-            input type="checkbox" id="checkbox-memer-#{user.username}" data-username="#{user.username}"
+            input type="checkbox" id="checkbox-member-#{user.username}" data-username="#{user.username}"
             .checkmark
