--- a/app/views/chats/_add_member_form.slim
+++ b/app/views/chats/_add_member_form.slim
@@ -2,5 +2,5 @@
 
 .my-3
   = form_for Chat.new do |f|
-    = f.hidden_field :chat_memberships
+    = hidden_field_tag "chat_membership[usernames][]", []
     = f.submit 'Create', class: 'btn btn-primary w-100'
