--- a/app/views/chats/_chat_object.slim
+++ b/app/views/chats/_chat_object.slim
@@ -1,7 +1,7 @@
 .chat-element
   .photo
     - if chat.owner&.profile_picture&.url
-      = image_tag(chat.owher.profile_picture.square_320.url, class: 'profile-image')
+      = image_tag(chat.owner.profile_picture.square_320.url, class: 'profile-image')
     - else
       = image_pack_tag('media/images/placeholders/placeholder-user-profile.png', class: 'profile-image')
       
